2020-04-26  Darin Adler  <darin@apple.com>

        [Cocoa] stop using out arguments for document attributes when converting to attributed strings
        https://bugs.webkit.org/show_bug.cgi?id=211048

        Reviewed by Sam Weinig.

        * wtf/cocoa/URLCocoa.mm:
        (WTF::URL::createCFURL const): Use init instead of initWithString:@"". The two are
        equivalent in more recent versions of Foundation.

2020-04-26  Yoshiaki Jitsukawa  <yoshiaki.jitsukawa@sony.com>

        [PlayStation] Enable TestWTF and TestWebCore
        https://bugs.webkit.org/show_bug.cgi?id=208849

        Reviewed by Don Olmstead.

        * wtf/PlatformPlayStation.cmake:
        Add WTF_CopySharedLibs() to install dependencies.

2020-04-26  Yusuke Suzuki  <ysuzuki@apple.com>

        Use `static Lock` instead of `static NeverDestroyed<Lock>`
        https://bugs.webkit.org/show_bug.cgi?id=211036

        Reviewed by Darin Adler.

        Lock can be static-initialized since it has constexpr constructor. No need to use NeverDestroyed<Lock>.

        * wtf/Logger.h:
        (WTF::Logger::observerLock):

2020-04-26  Joonghun Park  <jh718.park@samsung.com>

        [WTF] Workaround gcc bug for unsigned bitfield related usual arithmetic conversions
        https://bugs.webkit.org/show_bug.cgi?id=211044

        Reviewed by Darin Adler.

        * wtf/URL.cpp:
        (WTF::URL::setHost):
        (WTF::URL::setHostAndPort):
        (WTF::URL::setUser):
        (WTF::URL::setPassword):

2020-04-25  Joonghun Park  <jh718.park@samsung.com>

        Unreviewed. Remove the bulid warnings below since r260707.
        warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]

        * wtf/URL.cpp:
        (WTF::URL::setHost):
        (WTF::URL::setHostAndPort):
        (WTF::URL::setUser):
        (WTF::URL::setPassword):

2020-04-25  Darin Adler  <darin@apple.com>

        [Cocoa] Deal with another round of Xcode upgrade checks