@@ -1,3 +1,15 @@
+2020-04-27  Ryan Haddad  <ryanhaddad@apple.com>
+
+        [Cocoa] stop using out arguments for document attributes when converting to attributed strings
+        https://bugs.webkit.org/show_bug.cgi?id=211048
+
+        Unreviewed partial revert of r260739 to remove unexpected logging that broke Catalina-Release-WK2-Perf tests.
+
+        * platform/network/cocoa/NetworkStorageSessionCocoa.mm:
+        (WebCore::policyProperties):
+        * platform/network/cocoa/ResourceRequestCocoa.mm:
+        (WebCore::siteForCookies):
+
 2020-04-27  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Text manipulation should not aggregate text from different navigation anchor elements
